# master_thesis

./: README.md
pose_recorder/: README.md  package.xml  setup.py
pose_recorder/launch/: main.launch.py
pose_recorder/pose_recorder/: main_window.py  pose_editor.py  pose_recorder.py  trajectory_commander.py  utils.py
pose_recorder/pose_recorder/tabs/: geo_constraints_tab.py  pose_editor_tab.py  servoing_tab.py  space_mouse_tab.py  tf_settings_tab.py
pose_recorder/project_data/: README.md
pose_recorder/project_data/config/: NEURA_2_flange_musa.yaml  REAL.yaml  REAL_FAST.yaml  REAL_N1.yaml  REAL_N2.yaml  REAL_N2_musa_adapted.yaml  SIME_HOME.yaml  SIM_HOME.yaml  SIM_HOME_v2.yaml  SIM_VERIFIED.yaml  SIM_WITH_INVERSION.yaml  musa_world_link.yaml  musa_world_link_slow.yaml  ron_sebastian.yaml  space_mouse_v1.yaml  space_mouse_v2.yaml  space_mouse_v3.yaml  space_mouse_v4_angular_only.yaml  space_mouse_v4_full.yaml  space_mouse_v4_linear_only.yaml  space_mouse_v5_world_full_real.yaml  space_mouse_v6_SIM.yaml  space_mouse_v8.yaml
pose_recorder/project_data/poses/: AN_GUTEN_TAGEN.yaml  CENTERED_POSE.yaml  CENTERED_TOGETHER.yaml  CENTRALIZED.yaml  COOL.yaml  CRAZY.yaml  DHRUVIL.yaml  HEY!!?.yaml  HEYHEYHEY.yaml  HIER_KOMMT_ALEX.yaml  HIGHER.yaml  HIGHER_MIDDLE.yaml  HOME.yaml  HOME_BACK.yaml  HOME_CENTERED_RG6.yaml  HOME_FRONT.yaml  HOME_LEFT.yaml  HOME_ORIGINAL.yaml  HOME_RECTANGULAR.yaml  HOME_RIGHT.yaml  HOME_TEST.yaml  HOME_UPRIGHT.yaml  HOME__2R.yaml  HOME__updated.yaml  LEFT_DOWN__RIGHT_UP.yaml  LEFT_UP__RIGHT_DOWN.yaml  NEW_POSE_MEETING.yaml  NEW_POSE_v123.yaml  (+26 more)
(+26 files in other folders)
