<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_recorder</name>
  <version>1.0.0</version>
  <description>Static pose recorder for a dual-arm robotic system</description>
  <maintainer email="martin.dehmel@iis.fraunhofer.de">Martin Dehmel</maintainer>
  <license>TODO: License declaration</license>

   <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_python</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <!-- Pip package dependency -->
  <exec_depend>python3-pyside6</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
